# voltorb-solver

./: README.md  pyproject.toml
assets/templates/: textbox_offsets.json
assets/templates/raw/tile_state/: .gitkeep
scripts/: README.md  build_templates.py  score_template_match.py
src/voltorb_solver/: __init__.py  advisor.py  game_state.py  main.py  overlay_app.py  recalc_service.py  solver.py  stats.py
src/voltorb_solver/image_import/: __init__.py  crop_dialog.py  parser.py  screen_parser.py
src/voltorb_solver/ui/: board_widget.py  main_window.py  solver_panel.py  stats_panel.py  value_picker.py
tests/: test_advisor.py  test_image_parser.py  test_screen_parser.py  test_solver.py  test_state_updates.py
