[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voltorb-solver"
version = "0.1.0"
description = "Offline Voltorb Flip helper with probability solver"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8.0",
  "Pillow>=10.4.0",
  "numpy>=2.2.2",
  "opencv-python>=4.10.0.84",
  "pytesseract>=0.3.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
]
ocr = [
  "paddleocr>=2.7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
